# napping_tools

./: README.md  pyproject.toml  world_news_explorer-0.1.0-py3-none-any.whl
src/scraper/: base_logger.py  config.py  database_interactions.py  main.py  scraper.py  translator.py  utils.py
src/scraper/output/raw_scrape/: 2022-09-03.json  2022-09-04.json  2022-09-05.json
src/scraper/output/translated_scrape/: 2022-09-03.json  2022-09-04.json  2022-09-05.json
