[tool.poetry]
name = "world_news_explorer"
version = "0.1.0"
description = ""
authors = ["vicwik-gyg <victor.wiklund@getyourguide.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
lxml = "^4.9.1"
goslate = "^1.5.4"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.40"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
